@@ -1348,4 +1348,9 @@
 ===============================================================================
  6 Oct 97: Released TclX 8.0.0
 ===============================================================================
-
+18 Oct 97
+  o Fixed several minor bugs.
+  o Added change to help proc to search for command if full path is not
+    found.  Contributed by Massimo Dal Zotto <dz@cs.unitn.it>.
+-------------------------------------------------------------------------------
+  
